fix overflow in layout

--- a/gridview.css
+++ b/gridview.css
@@ -8,7 +8,7 @@ body {
     height: 100%;
     display: grid;
     grid-template-rows: 50px 3fr 50px 1fr;
-    grid-template-columns: 300px 5fr 2fr;
+    grid-template-columns: 300px 4fr 3fr;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -78,6 +78,8 @@ body {
     border-left-width: 5px;
     border-left-style: solid;
     background-color: #e8e8e8;
+    overflow-x:scroll;
+    overflow-y:scroll;
 }
 
 .tabChoice {
